Fix the overflow-x

--- a/css/main.css
+++ b/css/main.css
@@ -158,7 +158,8 @@ input[class^='btn-']:hover {
 
 * {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  overflow-x: hidden; }
 
 body {
   font-family: "Raleway", sans-serif;
@@ -214,7 +215,7 @@ ul {
 
 #title {
   margin: auto 0rem;
-  color: #3D3D3D;
+  color: #3d3d3d;
   font-size: 2.5rem; }
 
 #inner-nav {
@@ -223,7 +224,7 @@ ul {
   top: 0;
   z-index: 2; }
   #inner-nav h1 {
-    font-family: 'Raleway', sans-serif; }
+    font-family: "Raleway", sans-serif; }
   #inner-nav #logo {
     background-color: transparent;
     text-align: center; }
@@ -234,7 +235,7 @@ ul {
     margin: auto;
     justify-content: space-between; }
     #inner-nav .inner-container #logo {
-      padding: .6rem 0; }
+      padding: 0.6rem 0; }
       #inner-nav .inner-container #logo #title {
         color: white; }
       #inner-nav .inner-container #logo .gradient {
@@ -262,7 +263,7 @@ ul {
 
 #header-home {
   height: 100vh;
-  background: #F5F5F5; }
+  background: #f5f5f5; }
   #header-home .header-content {
     height: 95vh;
     display: grid;
@@ -278,7 +279,7 @@ ul {
 
 #section-a {
   height: 90vh;
-  background: #F2C894;
+  background: #f2c894;
   text-align: left; }
   #section-a .content-container {
     height: 85vh;
@@ -299,7 +300,7 @@ ul {
 
 #section-b {
   height: 90vh;
-  background: linear-gradient(318.32deg, #C3D1E4 0%, #DDE7F3 55%, #D4E0ED 100%); }
+  background: linear-gradient(318.32deg, #c3d1e4 0%, #dde7f3 55%, #d4e0ed 100%); }
   #section-b .container {
     height: 85vh;
     display: grid;
@@ -317,14 +318,14 @@ ul {
       height: 150px;
       border-radius: 18px;
       padding: 10px;
-      box-shadow: 4px 2px 16px rgba(136, 165, 191, 0.48), -4px -2px 16px #FFFFFF;
+      box-shadow: 4px 2px 16px rgba(136, 165, 191, 0.48), -4px -2px 16px #ffffff;
       display: flex;
       align-items: center;
       justify-content: center; }
       #section-b .tech-icons .btn .inner-wrapper i {
         border-radius: 16px;
         color: rgba(201, 215, 230, 0.8);
-        text-shadow: 2px 2px 2px #d6e1ef99, 0 0 0 #000, 2px 2px 2px #d6e1ef00; }
+        text-shadow: 2px 2px 2px #d6e1ef99, 0 0 0 #000, 2px 2px 2px #d6e1ef00; }
   #section-b .tech-text {
     padding: 1rem; }
     #section-b .tech-text h1 {
@@ -362,31 +363,31 @@ ul {
     margin-bottom: 1rem;
     margin-left: auto;
     margin-right: auto;
-    background-color: #FCF7F8;
+    background-color: #fcf7f8;
     height: fit-content;
     transition: all 2s ease; }
     #section-c .kiwi-nut:hover {
       transition: all 1s ease;
-      background: #E0e5ec; }
+      background: #e0e5ec; }
   #section-c .firezone {
     margin-bottom: 1rem;
-    background: #FCF7F8;
+    background: #fcf7f8;
     height: fit-content;
     transition: all 2s ease;
     margin-left: 2rem; }
     #section-c .firezone:hover {
       transition: all 1s ease;
-      background: #E0e5ec; }
+      background: #e0e5ec; }
   #section-c .alex-photo {
     margin-left: auto;
     margin-right: 2rem;
     display: blcok;
-    background: #FCF7F8;
+    background: #fcf7f8;
     height: fit-content;
     transition: all 2s ease; }
     #section-c .alex-photo:hover {
       transition: all 1s ease;
-      background: #E0e5ec; }
+      background: #e0e5ec; }
 
 #main-footer {
   background: #151933;
@@ -422,10 +423,10 @@ ul {
       width: 20px;
       line-height: 20px;
       text-align: center;
-      padding: .5rem; }
+      padding: 0.5rem; }
       #main-footer .footer-content .social .fab:hover {
         background: #FF6961;
-        transition: all .5s; }
+        transition: all 0.5s; }
 
 #contact-a {
   background-color: #3e4a61;
@@ -435,46 +436,46 @@ ul {
     color: white; }
   #contact-a .text-fields {
     display: grid;
-    grid-template-areas: 'name email' 'subject phone' 'message message';
+    grid-template-areas: "name email" "subject phone" "message message";
     grid-gap: 1.2rem;
     margin-bottom: 1.2rem;
     border-radius: 15px; }
     #contact-a .text-fields .name-input {
-      background-color: #DAE6FF;
+      background-color: #dae6ff;
       grid-area: name;
       border-radius: 15px;
       border: 1px solid #546E7A; }
     #contact-a .text-fields .subject-input {
-      background-color: #DAE6FF;
+      background-color: #dae6ff;
       grid-area: subject;
       border-radius: 15px;
       border: 1px solid #546E7A; }
     #contact-a .text-fields .email-input {
-      background-color: #DAE6FF;
+      background-color: #dae6ff;
       grid-area: email;
       border-radius: 15px;
       border: 1px solid #546E7A; }
     #contact-a .text-fields .phone-input {
-      background-color: #DAE6FF;
+      background-color: #dae6ff;
       grid-area: phone;
       border-radius: 15px;
       border: 1px solid #546E7A; }
     #contact-a .text-fields .message-input {
-      background-color: #DAE6FF;
+      background-color: #dae6ff;
       grid-area: message;
       height: 100px;
       font-family: Arial, Helvetica, sans-serif;
       border-radius: 15px;
       border: 1px solid #546E7A; }
     #contact-a .text-fields .text-input {
-      padding: .5rem 1rem; }
-  #contact-a button[type='submit'] {
+      padding: 0.5rem 1rem; }
+  #contact-a button[type="submit"] {
     width: 25%;
     border: 1px solid #546E7A;
     border-radius: 15px;
     margin-bottom: 1rem; }
-  #contact-a input[type='text']:focus,
-  #contact-a input[type='email']:focus,
+  #contact-a input[type="text"]:focus,
+  #contact-a input[type="email"]:focus,
   #contact-a textarea:focus {
     border: orange solid 1px;
     outline: none; }
